examples/test/testpolicy14230.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14230
  namespace: namespace365
spec:
  podSelector:
    matchLabels:
      key24: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value16
          key45: value34
      podSelector:
        matchLabels:
          key21: value49
          key10: value5
